--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="./css/media768.css">
 	<link rel="stylesheet" href="./css/media576.css">
 	<link rel="stylesheet" href="./css/media500.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
 	<title>Pixer</title>
 </head>
 <body>
@@ -47,7 +49,7 @@
 				<a class="main__link" href="#">Xizmatlar bilan tanishish</a>
 			</div>
 			<div class="main__video">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/le3m0kDPWP8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="550" height="315" src="https://www.youtube.com/embed/le3m0kDPWP8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
 	</main>
